# api/docs/swagger.yaml
@@ -244,6 +244,38 @@ paths:
       summary: user modifying information
       tags:
       - Driver
+  /user/get-list:
+    get:
+      consumes:
+      - application/json
+      description: Here drivers' info can be fetched.
+      parameters:
+      - description: limit
+        in: query
+        name: limit
+        required: true
+        type: integer
+      - description: offset
+        in: query
+        name: offset
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Driver'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/models.StandardResponse'
+      security:
+      - BearerAuth: []
+      summary: Get info about all drivers driver
+      tags:
+      - Driver
   /user/send-number:
     post:
       consumes:
